--- a/pom.xml
+++ b/pom.xml
@@ -116,11 +116,11 @@
 			<optional>true</optional>
 		</dependency>
 		<!-- 上传组件包 -->
-		<dependency>
+		<!--<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.3.1</version>
-		</dependency>
+		</dependency>-->
 		
 		<dependency>
 			<groupId>commons-io</groupId>
